link checked in slidify

--- a/index.html
+++ b/index.html
@@ -90,6 +90,8 @@ vc=c(30,25,18,40,100,80)
 
 <h3>This is what our shinyapp is doing!!</h3>
 
+<p><a href="https://irocho.shinyapps.io/drill/" title="Electronic drill">I&#39;m an inline-style link with title</a></p>
+
   </article>
   <!-- Presenter Notes -->
 </slide>
