plot in R inside slidify

--- a/index.html
+++ b/index.html
@@ -77,20 +77,7 @@
   <article data-timings="">
     <p>This linear speed is tabulated. The materials and values used are:</p>
 
-<pre><code class="r">material= c(&quot;steel (50 kg/m2)&quot;, &quot;steel (70 kg/m2)&quot;,
-            &quot;steel (90 kg/m2)&quot;, &quot;bronze&quot;,&quot;aluminium&quot;,&quot;brass&quot;)
-vc=c(30,25,18,40,100,80)
-</code></pre>
-
-<h3>Calculations</h3>
-
-<p>If the hole has a diameter \(\phi\) the speed in the drill has to be calculated:</p>
-
-<p>\[n=\frac{v_{c}·1000}{\pi·\phi}\]</p>
-
-<h3>This is what our shinyapp is doing!!</h3>
-
-<p><a href="https://irocho.shinyapps.io/drill/" title="Electronic drill">I&#39;m an inline-style link with title</a></p>
+<p><img src="assets/fig/unnamed-chunk-1-1.png" alt="plot of chunk unnamed-chunk-1"> </p>
 
   </article>
   <!-- Presenter Notes -->
@@ -98,19 +85,27 @@ vc=c(30,25,18,40,100,80)
 
 <slide class="class" id="id" style="background:;">
   <hgroup>
-    <h2>How to use our small app</h2>
+    <h2>Calculations</h2>
   </hgroup>
   <article data-timings="">
-    <p>On the sidebar:</p>
+    <p>If the hole has a diameter \(\phi\) the speed in the drill has to be calculated:</p>
+
+<p>\[n=\frac{v_{c}·1000}{\pi·\phi}\]</p>
+
+<h3>This is what our shinyapp is doing!!</h3>
+
+<p><a href="https://irocho.shinyapps.io/drill/" title="Electronic drill">Clic to visit our app</a></p>
+
+<h2>How to use it</h2>
+
+<p>On the sidebar:</p>
 
 <ul>
 <li>the metal in which the hole is made.</li>
 <li>the diameter of the hole is selected </li>
 </ul>
 
-<p>On the main panel:</p>
-
-<p>the drill speed is obtained</p>
+<p>On the main panel the drill speed is obtained</p>
 
   </article>
   <!-- Presenter Notes -->
@@ -120,7 +115,7 @@ vc=c(30,25,18,40,100,80)
   <article data-timings="">
     
 <div class="quiz quiz-single well ">
-  <p>Just a question as a first test for my pupils to answer:</p>
+  <p>Just a question as a first test for students to answer:</p>
 
 <h2>Question 1</h2>
 
@@ -169,7 +164,7 @@ vc=c(30,25,18,40,100,80)
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=3 title='How to use our small app'>
+        data-slide=3 title='Calculations'>
          3
       </a>
     </li>
